@@ -1,0 +1,2 @@
+struct t{};
+struct g : public t{};
